--- a/Smart-Recipe-Generator/User_details(C231458).html
+++ b/Smart-Recipe-Generator/User_details(C231458).html
@@ -67,7 +67,7 @@
       </div>
   </nav>
 
-  <script src="java.js"></script>
+  <script src="User_details(C231458).js"></script>
 </body>
 
 </html>
